MyPage内にあるCRUD機能の実装

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -9,3 +9,7 @@ ja:
         password: "パスワード"
         password_confirmation: "確認用パスワード"
         icon: "アイコン"
+  time:
+    formats:
+      default: "%Y/%m/%d"
+      short: "%m/%d"
