Scheduleモデルを消去し、全てTaskモデルで行えるように変更

--- a/config/locales/flash_messages/ja.yml
+++ b/config/locales/flash_messages/ja.yml
@@ -24,6 +24,8 @@ ja:
     update:
       Success: "ミッションを編集しました"
       Not_success: "ミッションを編集できませんでした"
+      draftSuccess: "下書きを解除しました"
+      publishSuccess: "ミッションを下書きにしました"
     destroy:
       Success: "ミッションを削除しました"
     registration:
